--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,5 +1,7 @@
 body {
-    text-align: center;
+    margin: auto;
+    width: 50%;
+    padding: 10px;
 }
 
 div {
@@ -15,10 +17,12 @@ label {
 
 input:invalid+span:after {
     content: '✖';
+    color: red;
     padding-left: 5px;
 }
 
 input:valid+span:after {
     content: '✓';
+    color: green;
     padding-left: 5px;
 }
